<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    tools:context=".SignUpActivity">

    <include layout="@layout/support_toolbar" />

    <androidx.cardview.widget.CardView
        android:id="@+id/imgAddPhoto"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="60dp"
        app:cardCornerRadius="60dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline18"
        app:layout_constraintEnd_toStartOf="@+id/guideline15"
        app:layout_constraintStart_toStartOf="@+id/guideline17"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/userImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/user_photo" />

    </androidx.cardview.widget.CardView>


    <EditText
        android:id="@+id/edtFirstName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="8dp"
        android:ems="5"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/icPerson"
        app:layout_constraintStart_toEndOf="@+id/edtLastName"
        app:layout_constraintTop_toTopOf="@+id/guideline18" />

    <EditText
        android:id="@+id/edtLastName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="5"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/edtFirstName"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="@+id/guideline17"
        app:layout_constraintTop_toTopOf="@+id/guideline18" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"

        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/icEmail"
        app:layout_constraintStart_toStartOf="@+id/guideline17"
        app:layout_constraintTop_toBottomOf="@+id/edtFirstName" />

    <EditText
        android:id="@+id/edtUserPhoneNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"

        android:ems="10"
        android:gravity="start"
        android:hint="@string/phoneNumb"
        android:inputType="phone"
        android:maxLength="11"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/icPhone"
        app:layout_constraintStart_toStartOf="@+id/guideline17"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"

        android:ems="10"
        android:gravity="start"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLength="10"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/icLock"
        app:layout_constraintStart_toStartOf="@+id/guideline17"
        app:layout_constraintTop_toBottomOf="@id/edtUserPhoneNumber" />

    <EditText
        android:id="@+id/edtRePassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:hint="@string/rewritePassword"
        android:inputType="textPassword"
        android:ems="10"
        android:gravity="start"

        android:maxLength="10"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/icReLock"
        app:layout_constraintStart_toStartOf="@+id/guideline17"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword" />


    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/buttons_background"
        android:text="@string/signUpNow"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/guideline20"
        app:layout_constraintEnd_toStartOf="@+id/guideline16"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline19"
        app:layout_constraintTop_toBottomOf="@+id/edtRePassword"
        app:layout_constraintVertical_bias="0.87" />

    <ImageView
        android:id="@+id/icPerson"
        android:layout_width="19dp"
        android:layout_height="17dp"
        android:contentDescription="@string/personIconDesc"
        app:layout_constraintBottom_toBottomOf="@+id/edtFirstName"
        app:layout_constraintEnd_toStartOf="@+id/guideline15"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintTop_toTopOf="@+id/edtFirstName"
        app:srcCompat="@drawable/person" />

    <ImageView
        android:id="@+id/icEmail"
        android:layout_width="19dp"
        android:layout_height="14dp"
        android:contentDescription="@string/emailIconDesc"
        app:layout_constraintBottom_toBottomOf="@+id/edtEmail"
        app:layout_constraintEnd_toStartOf="@+id/guideline15"
        app:layout_constraintTop_toTopOf="@+id/edtEmail"
        app:srcCompat="@drawable/email" />


    <ImageView
        android:id="@+id/icPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/phoneIconDesc"
        app:layout_constraintBottom_toBottomOf="@+id/edtUserPhoneNumber"
        app:layout_constraintEnd_toStartOf="@+id/guideline15"
        app:layout_constraintTop_toTopOf="@+id/edtUserPhoneNumber"
        app:srcCompat="@drawable/phone_number" />

    <ImageView
        android:id="@+id/icLock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/passIconDesc"
        app:layout_constraintBottom_toBottomOf="@+id/edtPassword"
        app:layout_constraintEnd_toStartOf="@+id/guideline15"
        app:layout_constraintTop_toTopOf="@+id/edtPassword"
        app:srcCompat="@drawable/password" />

    <ImageView
        android:id="@+id/icReLock"
        android:layout_width="21dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/passIconDesc"
        app:layout_constraintBottom_toBottomOf="@+id/edtRePassword"
        app:layout_constraintEnd_toStartOf="@+id/guideline15"
        app:layout_constraintTop_toTopOf="@+id/edtRePassword"
        app:srcCompat="@drawable/password" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.38" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />


</androidx.constraintlayout.widget.ConstraintLayout>